[gd_scene load_steps=5 format=3 uid="uid://sba1apa4so4y"]

[ext_resource type="Script" uid="uid://cstticfc7th0" path="res://generator.gd" id="1_k6sox"]
[ext_resource type="Texture2D" uid="uid://butngaw2dxcms" path="res://assets/8Direction_TopDown_Character Sprites_ByBossNelNel/generator-off.png" id="1_yybav"]
[ext_resource type="Texture2D" uid="uid://05x67opg6w7y" path="res://assets/8Direction_TopDown_Character Sprites_ByBossNelNel/generator-on.png" id="2_r36sx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k6sox"]
radius = 39.012817

[node name="Generator" type="StaticBody2D"]
script = ExtResource("1_k6sox")

[node name="SpriteOff" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_yybav")

[node name="SpriteOn" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture = ExtResource("2_r36sx")

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(-1, 10)
shape = SubResource("CircleShape2D_k6sox")
